<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DexterTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="prompt_source">Pick a source</string>
        <string name="prompt_sink">Sink:</string>
        <string name="label_source">Source:</string>
        <string name="label_sink">Sink:</string>
    
    <string-array name="entries_source">
        <item>Contacts</item>
        <item>Text messages</item>
        <item>Recent calls</item>
        <item>Calendar</item>
        <item>Browser history</item>
        <item>Location</item>
        <item>Device ID</item>
    </string-array>
    <string-array name="entries_sink">
        <item>Apache HTTPClient</item>
        <item>Socket</item>
        <item>Logging</item>
        <item>File system</item>
        <item>IPC</item>
    </string-array>
        <string name="test">Test</string>
        <string name="dataLeaked">Data leaked</string>
        <string name="dataLeaked_long">The application managed to leak the given data.</string>
        <string name="ok">OK</string>
    
</resources>